09_ngartas.tf
resource "aws_route_table_association" "sonjw_ngartas_a" {
  subnet_id      = aws_subnet.sonjw_pria.id
  route_table_id = aws_route_table.sonjw_ngart_a.id
}

resource "aws_route_table_association" "sonjw_ngartas_c" {
  subnet_id      = aws_subnet.sonjw_pric.id
  route_table_id = aws_route_table.sonjw_ngart_c.id
}
